--- a/chatterbox-server/Gemfile
+++ b/chatterbox-server/Gemfile
@@ -6,7 +6,7 @@ gem "sinatra", "~> 2.1"
 
 # A fast and simple web server
 # https://github.com/macournoyer/thin
-gem "thin", "~> 1.8"
+gem "webrick"
 
 # Rack middleware. Used specifically for parsing the request body into params.
 # https://github.com/rack/rack-contrib
@@ -34,19 +34,6 @@ gem "sqlite3", "~> 1.4"
 # Require all files in a folder
 gem "require_all", "~> 3.0"
 
-# These gems will only be used when we are running the application locally
-group :development do
-  gem "pry", "~> 0.14.1"
+gem "pry"
 
-  # Automatically reload when there are changes
-  # https://github.com/alexch/rerun
-  gem "rerun"
-end
-
-# These gems will only be used when we are running tests
-group :test do
-  gem "database_cleaner", "~> 2.0"
-  gem "rack-test", "~> 1.1"
-  gem "rspec", "~> 3.10"
-  gem "rspec-json_expectations", "~> 2.2"
-end
+gem "rerun"
